ingress-demo/ealensvc.yml
apiVersion: v1
kind: Service
metadata:
  name: ealen-svc
  namespace: ingress-demo
spec:
  selector:
    app: ealen
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
