ingress-demo/httpbinsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-svc
  namespace: ingress-demo
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 7905
      targetPort: 80
