ingress-demo/svcnginx.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
  namespace: ingress-demo
spec:
  selector:
    app: ingress-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
