ingress-demo/new-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: ingress-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /flask
        pathType: Prefix
        backend:
          service:
            name: flask-app-svc 
            port:
              number: 80
      - path: /bin
        pathType: Prefix
        backend:
          service:
            name: httpbin-svc
            port:
              number: 7905
      - path: /echo-server
        pathType: Prefix
        backend:
          service:       
            name: ealen-svc
            port:
              number: 3000
